fix wrong height

--- a/src/components/BarItem/BarItem.css
+++ b/src/components/BarItem/BarItem.css
@@ -1,6 +1,6 @@
 .BarItem{
     padding: 10px;
-    height: 100%;
+    height: 30vh;
     box-sizing: border-box;
     text-align: center;
 }
